Animate Marker with list click

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 // v b) add a filter to the pane.
 // v c) activate filter functionality
 // x d) consider rewriting reused code.
-// o e) activate highlighting -
+// v e) activate highlighting -
 //      when selecting from list or marker:
 //      highlight the other;  show additional info
 //   f) add 3rd party api something.  such as: wikipedia, nt times, fourscquare
